attempting height on mobile fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@ input {
 html, body, #root, #app {
   overflow: auto;
   height: 100%;
-  height: -moz-available;
-  height: -webkit-fill-available;
-  height: fill-available;
+  // height: -moz-available;
+  // height: -webkit-fill-available;
+  // height: fill-available;
 }
